required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------
- Add support for per layer tuning of the shape to pixel conversion (SIMPLIFY, ROUND,
  SNAPTOGRID, FULLRESOLUTION)

- Fixed: Memory allocation results should always be checked (#3559)

- Fixed free(): invalid next size in mapfile.c (#3604)

- Added a built-in OpenLayers map viewer (#3549)

- Fixed issues with static buffers and sprintf (#3537)

- Fix for the memory corruption when mapping the string data type in the Java bindings (3491)

- Fixed double free in shp2img.c (#3497)

- Fixed number of CGI params is limited to 100 (#3583)

- Fixed duplicated XML and HTML errors from WFS GetFeature (#3571)

- Support group names for GetLegendGraphic and GetStyles (#3411)

- apply patch (thanks rouault) to advertise resultType=hits in WFS 1.1 Capabilities (#3575)

- mapshape.c: Fix writing of geometries with z/m and fail gracefully attempting
  to create such files if USE_POINT_Z_M is not enabled (#3564)

- sortshp.c: improve error handling (#3564)

- MSSQL2008: Add support for geography data type by extending the DATA syntax 
  to 'geometry_column(geometry_type) from table_name'

- Fixed ability to get the error message and code of an OWS exception (#3554)

- Fixed msOGRGetSymbolId according to the changes in gdal 1.8 (#3556)

- Support holding WMS client requests in RAM instead of writing to disk (#3555)

- RFC-61: Enhance MapServer Feature Style Support (#3544)

- Restrict cascaded WMS requests based on EXTENT (#3543)

- Avoid EPSG lookups for WMS client layers if possible (#3533)

- RFC-60: Add ability to skip ANGLE FOLLOW labels with too much character overlap (#3523)
